Improve link hover effects and spacing. Fix absolute urls.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -33,6 +33,11 @@ main {
 	margin: 0 auto;
 	padding: 0.5em 1em 1em 1em;
 	max-width: $main_width;
+
+	@media (min-width: $main_width) {
+		// increase padding on large screens
+		padding: 0.5em 1.5em 1em 1.5em;
+	}
 }
 
 
@@ -40,7 +45,7 @@ main {
 	display: block;
 
 	max-width: 0.5 * $main_width;
-	margin: 10px auto;
+	margin: 0.5em auto;
 	font-size: 20px;
 	line-height: 40px;
 
@@ -50,9 +55,22 @@ main {
 
 	padding: 3px 5px;
 
-	transition: color 0.5s ease;
 	color: #ececec;
 	&:hover {
-		color: #d6d6d6;
+		//color: #d6d6d6;
+		color: #47bded;
 	}
+}
+
+a.header-link * {
+	transition: color 0.5s ease;
+	color: #414142;
+	&:hover {
+		color: #47bded;
+	}
+}
+
+ul, ol {
+	// undo the damage from reset.css
+	margin-left: 1em;
 }
